--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
+  "homepage": "https://meshubhampol.github.io/meshubhampol-F4-Contest-1-March-Shubham-Pol/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
